--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "revproxy-auth",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "server.js",
   "repository": "https://github.com/senomas/revproxy-auth.git",
   "author": "denmaseno <agus@senomas.com>",
@@ -9,6 +9,7 @@
     "basic-auth": "^2.0.1",
     "http-proxy": "^1.17.0",
     "jsonwebtoken": "^8.4.0",
-    "key-encoder": "^1.1.7"
+    "key-encoder": "^1.1.7",
+    "moment": "^2.24.0"
   }
 }
