--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "denmaseno <agus@senomas.com>",
   "license": "MIT",
   "dependencies": {
-    "basic-auth": "^2.0.1",
-    "http-proxy": "^1.17.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-http-proxy": "^1.5.1",
     "jsonwebtoken": "^8.4.0",
-    "key-encoder": "^1.1.7",
-    "moment": "^2.24.0"
+    "key-encoder": "^1.1.7"
   }
 }
